--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ mysql-connector-python==8.0.27
 orjson==3.6.5
 passlib==1.7.4
 protobuf==3.19.1
+psycopg2==2.9.3
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.8.2
